[package]
name = "stork_asset_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stork-asset"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = "1.0.214"
serde_derive = "1.0.214"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
